# infrastructure-templates

./: .gitignore  README.md
docker-python/: dockerfile_python_apps  pyproject.toml
